# wg-obfuscator-installer

./: .gitignore  LICENSE  README.md  bootstrap.sh  install-wg+wgo.sh  pyproject.toml  requirements.txt  temp.py
tests/: test_main.py
wg_installer/: cli.py  main.py  tui.py
wg_installer/android/: __init__.py  builder.py
wg_installer/core/: __init__.py  config.py  fs.py  runner.py  state.py
wg_installer/export/: __init__.py  bundle.py  http_share.py
wg_installer/firewall/: __init__.py  nft.py
wg_installer/i18n/: i18n.py
wg_installer/i18n/locales/: cs.json  en.json  ru.json
wg_installer/net/: __init__.py  detect.py
wg_installer/obfuscator/: __init__.py  manager.py
wg_installer/templates/: share_index.html.j2
wg_installer/tui/: __init__.py  textual_wizard.py  wizard.py
wg_installer/wireguard/: __init__.py  manager.py
