[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wg-obfuscator-installer"
version = "0.1.0"
description = "Installer for wg-obfuscator and WireGuard on Debian/Ubuntu systems."
readme = "README.md"
authors = [{ name = "Your Name", email = "you @example.com" }]
license = { text = "MIT" }
dependencies = [
  "qrcode==7.4.2",
  "Pillow==10.3.0",
  "pydantic>=2.0.0",
  "textual>=0.50",  # modern TUI
  "Jinja2>=3.1",
]

[project.scripts]
wg-installer = "wg_installer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wg_installer*"]

[tool.setuptools.package-data]
wg_installer = [
  "i18n/locales/*.json",
]

[project.optional-dependencies]
dev = ["pytest"]
tui = [
  "questionary>=2.0.1",   # thin wrapper over prompt_toolkit
  "prompt_toolkit>=3.0.43"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]